# maiOOP

./: .gitignore  CMakeLists.txt  main.cpp  test_pure_num.cpp
include/: pure_num.h
src/: pure_num.cpp
